--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
             <div class="col-lg-12">
                 <img class="img-responsive" src="img/profile.png" alt="">
                 <div class="intro-text">
-                    <span class="name">Vagrant Demo</span>
+                    <span class="name">Docker Demo</span>
                     <hr class="star-light">
                     <span class="skills">Środowisko Node.js skonfigurowane za pomocą programu Vagrant</span>
                 </div>
