--- a/public/index.html
+++ b/public/index.html
@@ -76,9 +76,9 @@
             <div class="col-lg-12">
                 <img class="img-responsive" src="img/profile.png" alt="">
                 <div class="intro-text">
-                    <span class="name">Docker Demo</span>
+                    <span class="name">I WON</span>
                     <hr class="star-light">
-                    <span class="skills">Środowisko Node.js skonfigurowane za pomocą programu Vagrant</span>
+                    <span class="skills">Binka mozesz isc spac</span>
                 </div>
             </div>
         </div>
